gen/com/tang/intellij/lua/comment/parser/LuaDocParser.java
// This is a generated file. Not intended for manual editing.
package com.tang.intellij.lua.comment.parser;

import com.intellij.lang.ASTNode;
import com.intellij.lang.LightPsiParser;
import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.lang.PsiParser;
import com.intellij.psi.tree.IElementType;
import com.intellij.psi.tree.TokenSet;

import static com.tang.intellij.lua.comment.psi.LuaDocTypes.ACCESS_MODIFIER;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.ARR;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.ARR_TY;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.AT;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.CLASS_NAME_REF;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.COMMA;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.COMMENT_STRING;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.DASHES;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.EXTENDS;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.FUN;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.FUNCTION_PARAM;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.FUNCTION_TY;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.GENERAL_TY;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.GENERIC_DEF;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.GENERIC_TY;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.GT;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.ID;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.LCURLY;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.LPAREN;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.LT;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.OR;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.PARAM_NAME_REF;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.PAR_TY;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.PRIVATE;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.PROTECTED;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.PUBLIC;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.RCURLY;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.RPAREN;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.SHARP;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.STRING;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.STRING_BEGIN;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.STRING_LITERAL;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.STRING_LITERAL_TY;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TABLE_DEF;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TABLE_FIELD;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TABLE_TY;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_ALIAS;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_CLASS;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_DEF;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_DEPRECATED;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_FIELD;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_GENERIC_LIST;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_LAN;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_ALIAS;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_CLASS;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_DEPRECATED;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_FIELD;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_GENERIC;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_LANGUAGE;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_MODULE;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_NAME;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_OVERLOAD;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_PARAM;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_PRIVATE;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_PROTECTED;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_PUBLIC;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_RETURN;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_SEE;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_SUPPRESS;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_TYPE;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_NAME_VARARG;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_OVERLOAD;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_PARAM;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_RETURN;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_SEE;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_SUPPRESS;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_TYPE;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TAG_VARARG;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TY;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.TYPE_LIST;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.UNION_TY;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.VARARG;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.VARARG_PARAM;
import static com.tang.intellij.lua.psi.LuaParserUtil.TRUE_CONDITION;
import static com.tang.intellij.lua.psi.LuaParserUtil._AND_;
import static com.tang.intellij.lua.psi.LuaParserUtil._COLLAPSE_;
import static com.tang.intellij.lua.psi.LuaParserUtil._LEFT_;
import static com.tang.intellij.lua.psi.LuaParserUtil._NONE_;
import static com.tang.intellij.lua.psi.LuaParserUtil._NOT_;
import static com.tang.intellij.lua.psi.LuaParserUtil.adapt_builder_;
import static com.tang.intellij.lua.psi.LuaParserUtil.addVariant;
import static com.tang.intellij.lua.psi.LuaParserUtil.consumeToken;
import static com.tang.intellij.lua.psi.LuaParserUtil.consumeTokenSmart;
import static com.tang.intellij.lua.psi.LuaParserUtil.consumeTokens;
import static com.tang.intellij.lua.psi.LuaParserUtil.create_token_set_;
import static com.tang.intellij.lua.psi.LuaParserUtil.current_position_;
import static com.tang.intellij.lua.psi.LuaParserUtil.empty_element_parsed_guard_;
import static com.tang.intellij.lua.psi.LuaParserUtil.enter_section_;
import static com.tang.intellij.lua.psi.LuaParserUtil.exit_section_;
import static com.tang.intellij.lua.psi.LuaParserUtil.leftMarkerIs;
import static com.tang.intellij.lua.psi.LuaParserUtil.nextTokenIs;
import static com.tang.intellij.lua.psi.LuaParserUtil.nextTokenIsSmart;
import static com.tang.intellij.lua.psi.LuaParserUtil.recursion_guard_;
import static com.tang.intellij.lua.psi.LuaParserUtil.report_error_;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class LuaDocParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return doc(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ARR_TY, FUNCTION_TY, GENERAL_TY, GENERIC_TY,
      PAR_TY, STRING_LITERAL_TY, TABLE_TY, TY,
      UNION_TY),
  };

  /* ********************************************************** */
  // PRIVATE | PUBLIC | PROTECTED | TAG_NAME_PRIVATE | TAG_NAME_PUBLIC | TAG_NAME_PROTECTED
  public static boolean access_modifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "access_modifier")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACCESS_MODIFIER, "<access modifier>");
    r = consumeToken(b, PRIVATE);
    if (!r) r = consumeToken(b, PUBLIC);
    if (!r) r = consumeToken(b, PROTECTED);
    if (!r) r = consumeToken(b, TAG_NAME_PRIVATE);
    if (!r) r = consumeToken(b, TAG_NAME_PUBLIC);
    if (!r) r = consumeToken(b, TAG_NAME_PROTECTED);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // doc_item | STRING
  static boolean after_dash(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "after_dash")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = doc_item(b, l + 1);
    if (!r) r = consumeToken(b, STRING);
    exit_section_(b, l, m, r, false, LuaDocParser::after_dash_recover);
    return r;
  }

  /* ********************************************************** */
  // !(DASHES)
  static boolean after_dash_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "after_dash_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, DASHES);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ID
  public static boolean class_name_ref(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_name_ref")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    exit_section_(b, m, CLASS_NAME_REF, r);
    return r;
  }

  /* ********************************************************** */
  // STRING_BEGIN? STRING?
  public static boolean comment_string(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment_string")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMENT_STRING, "<comment string>");
    r = comment_string_0(b, l + 1);
    r = r && comment_string_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // STRING_BEGIN?
  private static boolean comment_string_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment_string_0")) return false;
    consumeToken(b, STRING_BEGIN);
    return true;
  }

  // STRING?
  private static boolean comment_string_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment_string_1")) return false;
    consumeToken(b, STRING);
    return true;
  }

  /* ********************************************************** */
  // (DASHES after_dash?)*
  static boolean doc(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc")) return false;
    while (true) {
      int c = current_position_(b);
      if (!doc_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "doc", c)) break;
    }
    return true;
  }

  // DASHES after_dash?
  private static boolean doc_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DASHES);
    r = r && doc_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // after_dash?
  private static boolean doc_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_0_1")) return false;
    after_dash(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '@' (tag_param
  //     | tag_alias
  //     | tag_suppress
  //     | tag_vararg
  //     | tag_return
  //     | tag_class
  //     | tag_field
  //     | tag_type
  //     | tag_lan
  //     | tag_overload
  //     | tag_see
  //     | tag_def
  //     | tag_deprecated
  //     | access_modifier
  //     | tag_generic_list)
  static boolean doc_item(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_item")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && doc_item_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tag_param
  //     | tag_alias
  //     | tag_suppress
  //     | tag_vararg
  //     | tag_return
  //     | tag_class
  //     | tag_field
  //     | tag_type
  //     | tag_lan
  //     | tag_overload
  //     | tag_see
  //     | tag_def
  //     | tag_deprecated
  //     | access_modifier
  //     | tag_generic_list
  private static boolean doc_item_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_item_1")) return false;
    boolean r;
    r = tag_param(b, l + 1);
    if (!r) r = tag_alias(b, l + 1);
    if (!r) r = tag_suppress(b, l + 1);
    if (!r) r = tag_vararg(b, l + 1);
    if (!r) r = tag_return(b, l + 1);
    if (!r) r = tag_class(b, l + 1);
    if (!r) r = tag_field(b, l + 1);
    if (!r) r = tag_type(b, l + 1);
    if (!r) r = tag_lan(b, l + 1);
    if (!r) r = tag_overload(b, l + 1);
    if (!r) r = tag_see(b, l + 1);
    if (!r) r = tag_def(b, l + 1);
    if (!r) r = tag_deprecated(b, l + 1);
    if (!r) r = access_modifier(b, l + 1);
    if (!r) r = tag_generic_list(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // (tableField (',' tableField)* (',')?)?
  static boolean fieldList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fieldList")) return false;
    fieldList_0(b, l + 1);
    return true;
  }

  // tableField (',' tableField)* (',')?
  private static boolean fieldList_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fieldList_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = tableField(b, l + 1);
    r = r && fieldList_0_1(b, l + 1);
    r = r && fieldList_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' tableField)*
  private static boolean fieldList_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fieldList_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!fieldList_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "fieldList_0_1", c)) break;
    }
    return true;
  }

  // ',' tableField
  private static boolean fieldList_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fieldList_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && tableField(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',')?
  private static boolean fieldList_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fieldList_0_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // '<' generic_def (',' generic_def)* '>'
  static boolean function_generic(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_generic")) return false;
    if (!nextTokenIs(b, LT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, LT);
    p = r; // pin = 1
    r = r && report_error_(b, generic_def(b, l + 1));
    r = p && report_error_(b, function_generic_2(b, l + 1)) && r;
    r = p && consumeToken(b, GT) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (',' generic_def)*
  private static boolean function_generic_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_generic_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!function_generic_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "function_generic_2", c)) break;
    }
    return true;
  }

  // ',' generic_def
  private static boolean function_generic_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_generic_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && generic_def(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ID (':' ty)?
  public static boolean function_param(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_PARAM, null);
    r = consumeToken(b, ID);
    p = r; // pin = 1
    r = r && function_param_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (':' ty)?
  private static boolean function_param_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_1")) return false;
    function_param_1_0(b, l + 1);
    return true;
  }

  // ':' ty
  private static boolean function_param_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXTENDS);
    r = r && ty(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (function_param ',')* ((function_param|vararg_param) |& ')')
  static boolean function_param_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_list")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = function_param_list_0(b, l + 1);
    r = r && function_param_list_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (function_param ',')*
  private static boolean function_param_list_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_list_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!function_param_list_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "function_param_list_0", c)) break;
    }
    return true;
  }

  // function_param ','
  private static boolean function_param_list_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_list_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = function_param(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  // (function_param|vararg_param) |& ')'
  private static boolean function_param_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_list_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = function_param_list_1_0(b, l + 1);
    if (!r) r = function_param_list_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // function_param|vararg_param
  private static boolean function_param_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_list_1_0")) return false;
    boolean r;
    r = function_param(b, l + 1);
    if (!r) r = vararg_param(b, l + 1);
    return r;
  }

  // & ')'
  private static boolean function_param_list_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_list_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = consumeToken(b, RPAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ID (EXTENDS class_name_ref)?
  public static boolean generic_def(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "generic_def")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, GENERIC_DEF, null);
    r = consumeToken(b, ID);
    p = r; // pin = 1
    r = r && generic_def_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (EXTENDS class_name_ref)?
  private static boolean generic_def_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "generic_def_1")) return false;
    generic_def_1_0(b, l + 1);
    return true;
  }

  // EXTENDS class_name_ref
  private static boolean generic_def_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "generic_def_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXTENDS);
    r = r && class_name_ref(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (ty ',')* ty
  static boolean generic_param_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "generic_param_list")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = generic_param_list_0(b, l + 1);
    r = r && ty(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (ty ',')*
  private static boolean generic_param_list_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "generic_param_list_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!generic_param_list_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "generic_param_list_0", c)) break;
    }
    return true;
  }

  // ty ','
  private static boolean generic_param_list_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "generic_param_list_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ty(b, l + 1, -1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ID
  public static boolean param_name_ref(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "param_name_ref")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    exit_section_(b, m, PARAM_NAME_REF, r);
    return r;
  }
